# gnag

./: .clang-format  .gitignore  .gitmodules  GnagTool Shortcut.lnk  Makefile  README.md  addressfinder.bat  buildgnagtool.bat  buildinator.bat  cleanbuildinator.bat  gnag.lst  gnagenvset.bat  gnagtool.bat  installlibraries.bat  test.bat
audio/opus/: Deep-Threats.opus  Vaulted.opus
common/: _defs.h  buttondata.c  buttondata.h  characterdata.c  characterdata.h  colorf.h  fillbardata.h  hazarddata.c  hazarddata.h  imagedata.h  jsonhelper.c  jsonhelper.h  mathf.c  mathf.h  panic.c  panic.h  scenario.c  scenario.h  sprites.h  textdata.h  uilayout.c  uilayout.h  uisprites.h  vec2.h
gfx/: bad.ase  good-back.ase  good.ase  hazardsprites.t3s  sprites.t3s  ugly.ase  uisprites.t3s
godot/: Gnag.sln  gnag.png.import  icon.svg.import  project.godot
godot/board/: BoardCamera.cs  BoardState.cs  IBoardAction.cs
godot/board/actions/: MoveAction.cs
godot/character/: Character.cs  CharacterType.cs  character.tscn  ct_unknown.tres  selection-indicator.png.import  sf_unknown.tres  unknown.png.import
godot/character/bad/: bad-back.png.import  bad-trim.png.import  bad-walk.png.import  bad.png.import  ct_bad.tres  sf_bad.tres
godot/character/good/: ct_good.tres  good-back.png.import  good-trim.png.import  good-walk.png.import  good.png.import  sf_good.tres
godot/character/imp/: enemy.png.import
godot/character/ugly/: ct_ugly.tres  ugly-back.png.import  ugly-walk.png.import  ugly.png.import
godot/game/: game.tscn
godot/scenario/: Scenario.cs  ScenarioCharacterInstanceData.cs  ScenarioData.cs  scenario.tscn
godot/tile/: Tile.cs  emptytile.png.import  selected-tile.png.import  tile.tscn
godot/ui/: button-tex-disabled.png.import  button-tex-hovered.png.import  button-tex-pressed.png.import  button-tex.png.import
godot/ui/control_panel/: ControlPanel.cs  control_panel.tscn  speech-icon.png.import
godot/ui/debug_panel/: DebugActionAttribute.cs  DebugInfoText.cs  DebugPanelButtons.cs  debug_header.png.import
godot/ui/fonts/: PTSans-Bold.ttf.import  PTSans-BoldItalic.ttf.import  PTSans-Italic.ttf.import  PTSans-Regular.ttf.import
godot/ui/helper_panel/: HelperPanel.cs
godot/ui/icons/: move-icon.png.import
godot/ui/themes/: primary.tres
godot/utils/: Bouncer.cs  CanvasLayerInGameVisibility.cs  NodeInGameVisibility.cs
inis/: buttonlayout_playerturn.ini
jsons/: CarsonTest.json  CooperTestLevel.json  buttonlayout_playerturn.json  customwhatever.json  example.json  gus_ui.json  scenario1.json  test1.json  test2.json  test3.json  uilayout_playerturn.json  uilayout_playerturn2.json
romfs/gfx/: sprites.t3x  uisprites.t3x
source/: _defs.h  actionscripts.c  actionscripts.h  actor.h  ai.c  ai.h  audio.c  audio.h  board.c  board.h  button.c  button.h  buttondata.h  buttonlayout.c  buttonlayout.h  character.c  character.h  characteraction.c  characteraction.h  debugconsole.c  debugconsole.h  fillbar.c  fillbar.h  fillbardata.h  game.c  game.h  grid.c  grid.h  hazard.c  hazard.h  image.c  image.h  imagedata.h  input.c  input.h  jsonhelper.c  main.c  mathf.c  mathf.h  panic.c  (+14 more)
tools/gnagtool/: CMakeLists.txt
tools/gnagtool/packaging/: NSIS.template.in
tools/gnagtool/source/: Resource.aps  Resource.rc  fileexplorer.cpp  fileexplorer.h  gnagoswrapper.cpp  gnagoswrapper.h  gnagtool.cpp  gnagtool.h  jsonserializable.cpp  jsonserializable.h  main.cpp  mouse.cpp  mouse.h  scenario.cpp  scenario.h  scenarioeditor.cpp  scenarioeditor.h  sdlt3s.cpp  sdlt3s.h  toolgui.cpp  toolgui.h  uilayout.cpp  uilayout.h  uilayouteditor.cpp  uilayouteditor.h  version.h
trackermods/: Test_2.mod
